Changes in version 1.1 (??? 2006)

- Added support for making screenshots in all video drivers and a general
  possibility to save any IImage to several file formats.
  Currently OpenGL produces flipped images (left as is for performance reasons)
  and some image writers are not yet implemented. As a testcase screenshots
  are now available in the demo by pressing F9.
  This code was contributed by Travis Vitek.

- Improved .3ds and .obj file importers.

- Added support for .b3d (Blitz Basic) submitted by Luke Hoschke and
  .pak (Quake archive) files submitted by skreamz.

- Added sky dome implementation contributed by Anders la Cour-Harbo (alc).

- In addition to the Cube scene node (formerly test scene node) there is now also a sphere scene node available,
  with an adjustable amount of polygons. Use ISceneManager::addSphereSceneNode to create it.
  Thx to Alfaz93 for making available his code on which this node is based on.
  Note that both nodes now use default material settings, e.g. lighting is enabled by default.

- Fixed Linux keyhandling for many keys.

- The aspect ratio has been inverted in the matrix, which means when setting a new aspect ratio
  for cameras, set it to screen.width/screen.height now instead of screen.height/screen.width
  as previously.

- added support for reading/importing binary .x files.

- .ms3d and .x normals are now correctly transformed in animations, bounding
  boxes are slightly better transformed, but not yet correct.

- Added possibility to load and save Irrlicht scenes to and from xml files via
  ISceneManager::saveScene and ISceneManager::loadScene. Note that not all
  scene nodes are supported yet, but most features should already work.

- Bounding box of the Skybox corrected (set to null)

- The SMaterial structure now supports 4 textures. (Currently ignored by the renderers and their materials.)

- Test scene node renamed to CubeSceneNode.

- Added scene node animator factories. This is the same as scene node